5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1650_87.log
== TEST (2019-04-24 13:44:20) 
-- CODE:
n1 = int(input"Digite n1: ")
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n2: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 = n1 < n2 < n3):
	print(n1)
elif(nMenor3 = n3 < n2 < n1):
	print(n3)
else:
	print(nMenor2)
		
-- ERROR:
File "XXXX", line 1
    n1 = int(input"Digite n1: ")
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:44:42) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n2: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 = n1 < n2 < n3):
	print(n1)
elif(nMenor3 = n3 < n2 < n1):
	print(n3)
else:
	print(nMenor2)
		
-- ERROR:
File "XXXX", line 7
    if(nMenor1 = n1 < n2 < n3):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:44:53) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n2: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(nMenor2)
		
-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:45:04) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n2: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(nMenor2)
		
-- EXECUTION TIME:
0.280475
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
False
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
False
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
False
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:45:07) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n2: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(nMenor2)
		
-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:45:15) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n2: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(nMenor2)
		
-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:46:44) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n2: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
elif(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
elif(nMenor2 == n2 < n1 < n3)
	print(n2)	
-- ERROR:
File "XXXX", line 7
    elif(nMenor1 == n1 < n2 < n3):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:47:51) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n2: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(n2)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:47:57) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n2: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(n2)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:48:07) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n2: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(n2)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:49:28) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
elif(nMenor2 == n2 < n1 < n3 )
else:
	print("Nada")
-- ERROR:
File "XXXX", line 11
    elif(nMenor2 == n2 < n1 < n3 )
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:49:44) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
else:
	print("Nada")
-- OUTPUT:
Nada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:50:14) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
else:
	print(n3 or n2)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:50:20) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
else:
	print(n3 or n2)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:50:26) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
else:
	print(n3 or n2)
-- EXECUTION TIME:
0.129152
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
789
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:50:30) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
else:
	print(n3 or n2)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:50:38) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
else:
	print(n3 or n2)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:51:02) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)

elif(nMenor2 == n2 < n1 < n3):
	print(n2)
else:
	print(n3 or n2)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:51:42) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(n2 or n3)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:51:51) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(n2 or n3)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 13:51:57) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(n2 or n3)
-- EXECUTION TIME:
0.180464
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:52:02) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(n2 or n3)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:52:58) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print("Nada")
-- OUTPUT:
Nada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:54:31) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(n1 or n2 or n3)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 13:54:49) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print()
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:21:12) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(n1)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:22:31) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(nMenor1)
-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:22:37) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(nMenor1)
-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:23:36) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
n1 != n1 and n2 != n3
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)
elif(nMenor2 == n2 < n1 < n3):
	print(n2)
elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(nMenor1)
-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:24:45) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
n1 != n1 and n2 != n3
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)

elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print()
-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:24:50) 
-- CODE:
n1 = int(input("Digite n1: "))
n2 = int(input("Digite n2: "))
n3 = int(input("Digite n3: "))
n1 != n1 and n2 != n3
nMenor1 = n1 < n2 < n3
nMenor2 = n2 < n1 < n3
nMenor3 = n3 < n2 < n1
if(nMenor1 == n1 < n2 < n3):
	print(n1)

elif(nMenor3 == n3 < n2 < n1):
	print(n3)
else:
	print(n2)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:51:47) 
-- CODE:
n1 = int(input("Digite o primeiro numero: "))
n2 = int(input("Digite o segundo numero: "))
n3 = int(input("Digite o terceiro numero: "))

d1 = n1 != n2
d2 = n1 != n3
d3 = n2 != n3

if(n1 < n2 and n1 < n3):
	print(n1)
else:
	print("Nha")
-- OUTPUT:
Nha
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:52:20) 
-- CODE:
n1 = int(input("Digite o primeiro numero: "))
n2 = int(input("Digite o segundo numero: "))
n3 = int(input("Digite o terceiro numero: "))

d1 = n1 != n2
d2 = n1 != n3
d3 = n2 != n3

if(n1 < n2 and n1 < n3):
	print(n1)
else:
	print("Nha")
-- OUTPUT:
Nha
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:55:15) 
-- CODE:
n1 = int(input("Digite o primeiro numero: "))
n2 = int(input("Digite o segundo numero: "))
n3 = int(input("Digite o terceiro numero: "))

n1 != n2
n1 != n3
n2 != n3

if(n1 < n2 and n1 < n3):
	print(n1)
	elif(n2 < n1 and n2 < n3):
	print(n2)
else:
	print("Nha")
-- ERROR:
File "XXXX", line 11
    elif(n2 < n1 and n2 < n3):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:55:30) 
-- CODE:
n1 = int(input("Digite o primeiro numero: "))
n2 = int(input("Digite o segundo numero: "))
n3 = int(input("Digite o terceiro numero: "))

n1 != n2
n1 != n3
n2 != n3

if(n1 < n2 and n1 < n3):
	print(n1)
elif(n2 < n1 and n2 < n3):
	print(n2)
else:
	print("Nha")
-- OUTPUT:
Nha
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:56:04) 
-- CODE:
n1 = int(input("Digite o primeiro numero: "))
n2 = int(input("Digite o segundo numero: "))
n3 = int(input("Digite o terceiro numero: "))

n1 != n2
n1 != n3
n2 != n3

if(n1 < n2 and n1 < n3):
	print(n1)
elif(n2 < n1 and n2 < n3):
	print(n2)
else:
	print(n3)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:56:20) 
-- CODE:
n1 = int(input("Digite o primeiro numero: "))
n2 = int(input("Digite o segundo numero: "))
n3 = int(input("Digite o terceiro numero: "))

n1 != n2
n1 != n3
n2 != n3

if(n1 < n2 and n1 < n3):
	print(n1)
elif(n2 < n1 and n2 < n3):
	print(n2)
else:
	print(n3)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:56:27) 
-- CODE:
n1 = int(input("Digite o primeiro numero: "))
n2 = int(input("Digite o segundo numero: "))
n3 = int(input("Digite o terceiro numero: "))

n1 != n2
n1 != n3
n2 != n3

if(n1 < n2 and n1 < n3):
	print(n1)
elif(n2 < n1 and n2 < n3):
	print(n2)
else:
	print(n3)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:56:42) 
-- CODE:
n1 = int(input("Digite o primeiro numero: "))
n2 = int(input("Digite o segundo numero: "))
n3 = int(input("Digite o terceiro numero: "))

n1 != n2
n1 != n3
n2 != n3

if(n1 < n2 and n1 < n3):
	print(n1)
elif(n2 < n1 and n2 < n3):
	print(n2)
else:
	print(n3)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 21:56:51) 
-- CODE:
n1 = int(input("Digite o primeiro numero: "))
n2 = int(input("Digite o segundo numero: "))
n3 = int(input("Digite o terceiro numero: "))

n1 != n2
n1 != n3
n2 != n3

if(n1 < n2 and n1 < n3):
	print(n1)
elif(n2 < n1 and n2 < n3):
	print(n2)
else:
	print(n3)
-- EXECUTION TIME:
0.295761
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
